--- a/Views/Partials/Navigation/TopNavigation.cshtml
+++ b/Views/Partials/Navigation/TopNavigation.cshtml
@@ -4,7 +4,7 @@
     var site = Model.Root();
     var selection = site.Children.Where(x => x.IsVisible());
     
-    var selection2 = map.selection(x=>x.Children.IsVisible())
+    //var selection2 = map.selection(x=>x.Children.IsVisible())
 }
 <!-- comment out the following line if you want to remove the root node name from the top navigation -->
 <a class="nav-link @Html.Raw(Model.Id == site.Id ? "navi-link--active" : "")" href="@site.Url">@site.Name</a>
