--- a/Views/Partials/Navigation/TopNavigation.cshtml
+++ b/Views/Partials/Navigation/TopNavigation.cshtml
@@ -10,5 +10,5 @@
 <a class="nav-link @Html.Raw(Model.Id == site.Id ? "navi-link--active" : "")" href="@site.Url">@site.Name</a>
 @foreach (var item in selection)
 {
-    item.Children.Where(x => x.IsVisible()
+    var selection2 = item.Children.Where(x => x.IsVisible()
 }
