--- a/Views/Partials/Navigation/TopNavigation.cshtml
+++ b/Views/Partials/Navigation/TopNavigation.cshtml
@@ -8,5 +8,5 @@
 <a class="nav-link @Html.Raw(Model.Id == site.Id ? "navi-link--active" : "")" href="@site.Url">@site.Name</a>
 @foreach (var item in selection)
 {
-    var selection = item.Children.Where(x => x.IsVisible()
+    var selection = item.Children.Where(x => x.IsVisible();
 }
