--- a/Views/Partials/Navigation/TopNavigation.cshtml
+++ b/Views/Partials/Navigation/TopNavigation.cshtml
@@ -1,12 +1,25 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @using Umbraco.Web;
-@{ 
-    var site = Model.Content.Site();
+@{
+    var site = Model.Root();
     var selection = site.Children.Where(x => x.IsVisible());
 }
-<!-- uncomment this line if you don't want it to appear in the top navigation -->
-<a class="nav-link @Html.Raw(Model.Content.Id == site.Id ? "navi-link--active" : "")" href="@site.Url">@site.Name</a>
+<!-- comment out the following line if you want to remove the root node name from the top navigation -->
+<a class="nav-link @Html.Raw(Model.Id == site.Id ? "navi-link--active" : "")" href="@site.Url">@site.Name</a>
 @foreach (var item in selection)
 {
-    <a class="nav-link @(item.IsAncestorOrSelf(Model.Content) ? "nav-link--active" : null)" href="@item.Url">@item.Name</a>
+    var selection = item.Children.Where(x => x.IsVisible();
+@{
+	var selection = Umbraco.ContentAtRoot().FirstOrDefault()
+    .Children()
+    .Where(x => x.IsVisible());
+}
+<ul>
+	@foreach (var item in selection)
+	{
+		<li>
+			<a href="@item.Url">@item.Name</a>
+		</li>
+	}
+</ul>
 }
