Adding partial-view 'TopNavigation.cshtml'

--- a/Views/Partials/Navigation/TopNavigation.cshtml
+++ b/Views/Partials/Navigation/TopNavigation.cshtml
@@ -1,8 +1,9 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @using Umbraco.Web;
 @{
-var rootNode = Model.Root();
-var myDepartmentNodes = rootNode.Descendants().Where(x => x.IsVisible() && x.Level < 3);
+    var maxLevel = 3;
+    var siteSection = Model.AncestorOrSelf(2);
+    var selection = siteSection.Children.Where(x => x.IsVisible() && x.Level <= maxLevel);
 
     if(selection.Any()) {
         <ul>
