--- a/Views/Partials/Navigation/TopNavigation.cshtml
+++ b/Views/Partials/Navigation/TopNavigation.cshtml
@@ -1,29 +1,12 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @using Umbraco.Web;
 @{
-    var maxLevel = 3;
-    var siteSection = Model.AncestorOrSelf(2);
-    var selection = siteSection.Children.Where(x => x.IsVisible() && x.Level <= maxLevel);
-
-    if(selection.Any()) {
-        <ul>
-            @foreach (var item in selection) {
-                @link(item, maxLevel)
-            }
-        </ul>
-    }
+    var site = Model.Root();
+    var selection = site.Children.Where(x => x.IsVisible());
 }
-
-@helper link(IPublishedContent item, Integer level) {
-    var children = item.Children.Where(x => x.IsVisible() && x.Level <= level);
-    <li>
-        <a class="nav-link nav-link--black nav-link--air-bottom @(item.IsAncestorOrSelf(Model) ? "nav-link--active" : null)" href="@item.Url">@item.Name</a>
-        @if(children.Any()) {
-            <ul>
-                @foreach (var item in children) {
-                    @link(item, level)
-                }
-            </ul>
-        }
-    </li>
- }
+<!-- comment out the following line if you want to remove the root node name from the top navigation -->
+<a class="nav-link @Html.Raw(Model.Id == site.Id ? "navi-link--active" : "")" href="@site.Url">@site.Name</a>
+@foreach (var item in selection)
+{
+    <a class="nav-link @(item.IsAncestorOrSelf(Model) ? "nav-link--active" : null)" href="@item.Url">@item.Name</a>
+}
