--- a/Views/Partials/SectionHeader.cshtml
+++ b/Views/Partials/SectionHeader.cshtml
@@ -1,5 +1,5 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
-<section class="section section--themed section--header section--content-center-bottom">
+<section style="background-color:red" class="section section--themed section--header section--content-center-bottom">
     <div class="section__hero-content">
         <h1 class="no-air">@Model.GetProperty("PageTitle").GetValue()</h1>
     </div>
