--- a/Views/Partials/Navigation/TopNavigation.cshtml
+++ b/Views/Partials/Navigation/TopNavigation.cshtml
@@ -1,36 +1,59 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
-@using Umbraco.Web;
-@{
-    var site = Model.AncestorOrSelf<Home>();
-    var navItems = site.Children.Where(x => x.IsVisible());
+@using Umbraco.Core.Models.PublishedContent
+@using Umbraco.Web
+
+@{ 
+var site = Model.Root();
+var selection = site.Children.Where(x => x.IsVisible());
+
+var siteSettings = Umbraco.ContentQuery
+                               .ContentAtRoot()
+                               .DescendantsOrSelfOfType("settings")
+                               .FirstOrDefault();
+                               
+var NumMenus = siteSettings.Value<int>("numberMenus");
+
 }
 
+<!-- comment out the following line if you want to remove the root node name from the top navigation -->
 
- @if (navItems != null && navItems.Any())
-                {
-                    foreach (var item in navItems)
-                    {
-                        var itemChildren = item.Children.Where(x => x.IsVisible());
-                        bool hasChildren = itemChildren != null && itemChildren.Any();
-
-                        if (hasChildren && item.ContentType.Alias == "contentPage")
-                        {
-                        
-                            <li class="nav-link">
-                                <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">@item.Name</a>
-                                <div class="dropdown-menu">
-                                    @foreach (var child in itemChildren)
-                                    {
-                                        <a class="dropdown-item" href="@child.Url">@child.Name</a>
-                                    }
-                                </div>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link" href="@item.Url">@item.Name</a>
-                            </li>
-                        }
-                    }
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="collapse navbar-collapse" id="main_nav">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link @Html.Raw(Model.Id == site.Id ? "navi-link--active" : "")" href="@site.Url">@site.Name</a></li>
+                @foreach (var item in selection)
+                {    
+                    <li class="nav-item dropdown"> 
+                    <a class="nav-link dropdown-toogle @(item.IsAncestorOrSelf(Model) ? "nav-link--active" : null)" href="@item.Url">@item.Name</a>
+                    @Traverse(item,1,NumMenus)
+                    </li>
                 }
+        </ul>
+    </div>
+</nav>
+
+@helper Traverse(IPublishedContent node, int level, int NumMenus)
+{
+
+    level++;
+    
+    if (level > NumMenus)
+    {
+    return;
+    }
+    
+    var selection = node.Children.Where(x => x.IsVisible() @*&& x.ContentType.Alias == "contentPage"*@).ToArray();
+
+
+    if (selection.Length > 0)
+    {
+        <ul class="dropdown-menu @Html.Raw(level >= 3 ? "submenu" : "firstlevelmenu")">
+            @foreach (var item in selection)
+            {
+            <li><a href="@item.Url" class="dropdown-item"> @item.Name</a>
+                @Traverse(item,level,NumMenus)
+            </li>
+            }
+        </ul>    
+    }
+}
