Adding partial-view 'TopNavigation.cshtml'

--- a/Views/Partials/Navigation/TopNavigation.cshtml
+++ b/Views/Partials/Navigation/TopNavigation.cshtml
@@ -11,7 +11,7 @@ var siteSettings = Umbraco.ContentQuery
                                .DescendantsOrSelfOfType("settings")
                                .FirstOrDefault();
                                
-var NumMenus = siteSettings.Value<int>("numberMenus");
+var NumMenus = siteSettings.Value<int>("numberOfMenus");
 
 }
 
