--- a/Views/Carousel.cshtml
+++ b/Views/Carousel.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
 </head>
 <body>
-    @{ Html.RenderPartial("SiteLayout/_MainCarousel"); }
+    @{ Html.RenderPartial("~/Views/Partials/_MainCarousel"); }
     @RenderBody()      
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
