--- a/Views/master.cshtml
+++ b/Views/master.cshtml
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" href="@Url.Content("~/css/umbraco-starterkit-style.css")"/>
     <link rel="stylesheet" href="@Url.Content("~/css/navigation.css")"/>
+    <link rel="stylesheet" href="@Url.Content("~/css/Carousel-Hero.css")"/>
     
         <!--Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
