--- a/Views/master.cshtml
+++ b/Views/master.cshtml
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="@Url.Content("~/css/umbraco-starterkit-style.css")"/>
     <link rel="stylesheet" href="@Url.Content("~/css/navigation.css")"/>
     <link rel="stylesheet" href="@Url.Content("~/css/Carousel-Hero.css")"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
     
         <!--Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
