--- a/Views/master.cshtml
+++ b/Views/master.cshtml
@@ -63,7 +63,7 @@
 
         <nav class="nav-bar top-nav">
             @Html.Partial("~/Views/Partials/Navigation/TopNavigation.cshtml")
-            @Html.RenderPartial("~/Views/Partials/Navigation/_MainCarousel")
+            @{ Html.RenderPartial("~/Views/Partials/Navigation/_MainCarousel"); }
         </nav>
 
         <div class="mobile-nav-handler">
