Adding template 'Master'

--- a/Views/master.cshtml
+++ b/Views/master.cshtml
@@ -74,7 +74,7 @@
     </header>
 
     <main>
-        @{ Html.RenderPartial("~/Views/Partials/Navigation/_MainCarousel"); }
+        @{ Html.RenderPartial("~/Views/Partials/Navigation/_MainCarousel.cshtml"); }
         @RenderBody()
     </main>
 
