--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -4,9 +4,8 @@
 
 @{ 
     string carouselId = "mainCarousel";
+    IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>(carouselId);
     
-    var carousel = carouselId.Value<IEnumerable<IPublishedContent>>("carouselId", fallback: Fallback.ToLanguage, defaultValue: null);
-    @*IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>(carouselId)*@
 }
 
 @if (carousel != null && carousel.Any())
