--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -4,7 +4,8 @@
 
 @{ 
     string carouselId = "mainCarousel";
-    IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>(carouselId);
+    IEnumerable<IPublishedContent> carousel = Model.GetPropertyValue<IEnumerable<IPublishedContent>>("carouselId");
+    @*IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>(carouselId);*@
     
 }
 
