--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -7,8 +7,7 @@
     @*IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>(carouselId);
     IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>("slideshowDoc");
 *@
-    var item       = Model.GetPropertyValue<IPublishedContent>(carouselId)
-    var carousel   = item.Value<IEnumerable<IPublishedElement>>(carouselId, fallback: Fallback.ToLanguage, defaultValue: null);
+    var carousel   = Model.Value<IEnumerable<IPublishedElement>>(carouselId, fallback: Fallback.ToLanguage, defaultValue: null);
     @*var carousel = item.Value<IEnumerable<IPublishedContent>>(carouselId, fallback: Fallback.ToLanguage, defaultValue: null);
 *@
 }
