Adding partial-view '_MainCarousel.cshtml'

--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -1,6 +1,7 @@
 ﻿@inherits UmbracoViewPage
 @using Umbraco.Core.Models.PublishedContent
 @using Umbraco.Web.Models
+@using Umbraco.Web
 
 @{ 
     string carouselId = "mainCarousel";
