Adding partial-view '_MainCarousel.cshtml'

--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits UmbracoViewPage
+﻿@inherits Umbraco.Web.Macros.PartialViewMacroPage
 @using Umbraco.Core.Models.PublishedContent
 @using Umbraco.Web.Models
 @using Umbraco.Web
