Adding partial-view '_MainCarousel.cshtml'

--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -5,11 +5,12 @@
 
 @{ 
     string carouselId = "mainCarousel";
+    var carousel  = carouselId.Value<IEnumerable<IPublishedElement>>(carouselId, fallback: Fallback.ToLanguage, defaultValue: null);
     @*IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>("carouselId");
     IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>(carouselId);
     IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>("slideshowDoc");
 *@
-     var carousel = Model.Content.Value<IEnumerable<IPublishedContent>>(carouselId).ToArray();
+   
     @*var carousel = item.Value<IEnumerable<IPublishedContent>>(carouselId, fallback: Fallback.ToLanguage, defaultValue: null);
 *@
 }
