--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -5,7 +5,7 @@
 
 @{ 
     string carouselId = "mainCarousel";
-    var carousel  = carouselId.Value<IEnumerable<IPublishedElement>>(carouselId, fallback: Fallback.ToLanguage, defaultValue: null);
+    var carousel  = item.Value<IEnumerable<IPublishedElement>>(carouselId, fallback: Fallback.ToLanguage, defaultValue: null);
     @*IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>("carouselId");
     IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>(carouselId);
     IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>("slideshowDoc");
