Adding template 'Home'

--- a/Views/home.cshtml
+++ b/Views/home.cshtml
@@ -13,6 +13,7 @@
         {
             <a class="button button--border--solid" href="@Model.HeroCtalink.Url">
                 @Model.HeroCtacaption
+                @Model.carouselSlide
             </a>
         }
     </div>
