--- a/Views/master.cshtml
+++ b/Views/master.cshtml
@@ -43,6 +43,7 @@
            
            *@
            @Html.Partial("~/views/partials/navigation/topNavigation.cshtml")
+           @Html.Partial("~/views/partials/navigation/_MainCarousel.cshtml")
       @*  </nav>*@
     </div>
 
