Adding template 'Home'

--- a/Views/home.cshtml
+++ b/Views/home.cshtml
@@ -20,6 +20,7 @@
 
 <section class="section section">
     @Html.GetGridHtml(Model, "bodyText", "bootstrap3-fluid")
+               @Html.Partial("~/views/partials/navigation/_MainCarousel.cshtml")
 </section>
 
 
