Adding template 'Product'

--- a/Views/Product.cshtml
+++ b/Views/Product.cshtml
@@ -5,6 +5,7 @@
 }
 <!-- for the section we want to show the shop header -->
 @Html.Partial("~/Views/Partials/SectionHeader.cshtml", Model.Parent)
+@Html.Partial("~/views/partials/navigation/_MainCarousel.cshtml")
 
 <section class="section">
     <div class="container">
