Adding template 'Master'

--- a/Views/master.cshtml
+++ b/Views/master.cshtml
@@ -64,6 +64,7 @@
 
         <nav class="nav-bar top-nav">
             @Html.Partial("~/Views/Partials/Navigation/TopNavigation.cshtml")
+            @Html.Partial("~/views/partials/navigation/_MainCarousel.cshtml")
         </nav>
 
         <div class="mobile-nav-handler">
