--- a/Views/home.cshtml
+++ b/Views/home.cshtml
@@ -19,6 +19,7 @@
 </section>
 
 <section class="section section">
+    @Html.Partial("~/views/partials/navigation/topNavigation.cshtml")
     @Html.GetGridHtml(Model, "bodyText", "bootstrap3-fluid")
 </section>
 
