Adding partial-view '_MainCarousel.cshtml'

--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -6,6 +6,11 @@
 @{
     string carouselId = "mainCarousel";
     var carousel = Model.Value<IEnumerable<IPublishedElement>>(carouselId);
+        if (carousel == null) {
+    <p>BBBBBBBBBBBBBBBBBBBBBBBBBBBBB</p>} else {
+    <p>CCCCCCCCCCCCC</p>
+    }
+
 }
 @if (carousel != null && carousel.Any())
 {
