--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -5,7 +5,7 @@
 
 @{
     string carouselId = "mainCarousel";
-    var carousel = Model.Value<IEnumerable<IPublishedElement>>(carouselId);
+    var carousel = Model.Value<IEnumerable<IPublishedContent>>(carouselId);
         if (carousel == null) {
     <p>BBBBBBBBBBBBBBBBBBBBBBBBBBBBB</p>} else {
     <p>CCCCCCCCCCCCC</p>
