--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -5,9 +5,7 @@
 
 @{
     string carouselId = "mainCarousel";
-    //var carousel = Model.Value<IEnumerable<IPublishedContent>>(carouselId);
-    
-    IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>(carouselId);
+    var carousel = Model.Value<IEnumerable<IPublishedContent>>(carouselId);
     
         if (carousel == null) {
     <p>BBBBBBBBBBBBBBBBBBBBBBBBBBBBB</p>} else {
