--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -4,7 +4,7 @@
 @using Umbraco.Web.Models
 
 @{
-    var slTitle = @Model.GetProperty("slideTitle")
+    var slTitle = @Model.GetProperty("slideTitle");
     <p>@slTitle</p>
 
 
