Adding template 'MarioHome'

--- a/Views/MarioHome.cshtml
+++ b/Views/MarioHome.cshtml
@@ -14,7 +14,7 @@
     <meta name="author" content="">
 </head>
 
-<body class="frontpage theme-font-@font theme-color-@colorTheme">
+<body >
     <header class="header">
 
         <div class="logo">
