Adding template 'MarioHome'

--- a/Views/MarioHome.cshtml
+++ b/Views/MarioHome.cshtml
@@ -1,5 +1,6 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.MarioHome>
 @using ContentModels = Umbraco.Web.PublishedModels;
+
 @{
 	Layout = null;
 }
@@ -26,7 +27,7 @@
     </header>
 
     <main>
-        @Model.titulo
+        @Model.Titulo
     </main>
 
 </body>
