Adding template 'MarioHome'

--- a/Views/MarioHome.cshtml
+++ b/Views/MarioHome.cshtml
@@ -29,6 +29,14 @@
     <main>
         @Model.Titulo
     </main>
+    
+        <div>
+            @if (Model.Mnested1 != null)
+            {
+                <p>EXISTE CONTENT</p>
+            }
+        </div>
+    
 
 </body>
 
