Adding template 'MarioHome'

--- a/Views/MarioHome.cshtml
+++ b/Views/MarioHome.cshtml
@@ -27,11 +27,11 @@
     </header>
 
     <main>
-        @Model.Titulo
+        @Model.mainCarousel
     </main>
     
         <div>
-            @if (Model.Mnested1 != null)
+            @if (Model.mainCarousel != null)
             {
                 <p>EXISTE CONTENT</p>
             }
