Adding template 'MarioHome'

--- a/Views/MarioHome.cshtml
+++ b/Views/MarioHome.cshtml
@@ -31,7 +31,7 @@
     </main>
     
         <div>
-            @if (Model.MarioNested1 != null)
+            @if (Model.mnested1 != null)
             {
                 <p>EXISTE CONTENT</p>
             }
