Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -27,14 +27,14 @@
     </header>
 
     <main>
-        @Model.Titulo
+     @*   @Model.Titulo *@
     </main>
     
         <div>
-            @if (Model.Mnested1 != null)
+        @*    @if (Model.Mnested1 != null)
             {
                 <p>EXISTE CONTENT</p>
-            }
+            } *@
         </div>
     
 
