Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{ 
-    string carouselId = "mainCarousel";
+    string carouselId = "banner";
     IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>(carouselId);
 }
 
