Adding template 'MarioHome'

--- a/Views/MarioHome.cshtml
+++ b/Views/MarioHome.cshtml
@@ -27,14 +27,18 @@
     </header>
 
     <main>
-        @Model.Titulo
-        @Model.Testenome1
+        
+    SlideTitle
+
+        
+        @Model.SlideTitle
+        @Model.SlideTitle
     </main>
     
         <div>
             @if (Model.Mnested1 != null)
             {
-                <p>EXISTE CONTENT</p>
+                <p>@SlideTitle</p>
             }
         </div>
     
