--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.MarioHome>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Banner>
 @using ContentModels = Umbraco.Web.PublishedModels;
 
 @{
