--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -27,14 +27,14 @@
     </header>
 
     <main>
-        @Model.SlideTitle
-        @Model.SlideTitle
+        @Model.slideTitle
+        @Model.slideTitle
     </main>
     
         <div>
             @if (Model.Mnested1 != null)
             {
-                <p>@SlideTitle</p>
+                <p>@slideTitle</p>
             }
         </div>
     
