Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -31,12 +31,12 @@
         @Model.slideTitle
     </main>
     
-        <div>
+      @*  <div>
             @if (Model.Mnested1 != null)
             {
                 <p>@slideTitle</p>
             }
-        </div>
+        </div>*@
     
 
 </body>
