Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -3,8 +3,10 @@
 
 @{
 	Layout = null;
+     string title = slide.GetPropertyValue<string>("slideTitle");
 }
 
     <main>
         string title = slide.GetPropertyValue<string>("slideTitle");
     </main>
+    
