Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -6,7 +6,5 @@
      string title = slide.GetPropertyValue<string>("slideTitle");
 }
 
-    <main>
-        string title = slide.GetPropertyValue<string>("slideTitle");
-    </main>
+<div>@title</div>
     
