Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -3,7 +3,7 @@
 
 @{
 	Layout = null;
-     string title = slide.GetPropertyValue<string>("slideTitle");
+     string title = Model.GetPropertyValue<string>("slideTitle");
 }
 
 <div>@title</div>
