--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -1,6 +1,36 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Banner>
-@using ContentModels = Umbraco.Web.PublishedModels;
+﻿<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+</head>
 
-@{
-	Layout = null;
-}
+<body >
+    <header class="header">
+
+        <div class="logo">
+        <div class="mobile-nav-handler">
+            <div class="hamburger lines" id="toggle-nav">
+                <span></span>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        @Model.Titulo
+        @Model.Testenome1
+    </main>
+    
+        <div>
+            @if (Model.Mnested1 != null)
+            {
+                <p>EXISTE CONTENT</p>
+            }
+        </div>
+    
+
+</body>
+
+</html>
