--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -1,4 +1,10 @@
-﻿<html>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Banner>
+@using ContentModels = Umbraco.Web.PublishedModels;
+
+@{
+	Layout = null;
+}
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
