--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -1,9 +1,11 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Banner>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.MarioHome>
 @using ContentModels = Umbraco.Web.PublishedModels;
 
 @{
 	Layout = null;
 }
+
+
 <html>
 <head>
     <meta charset="utf-8">
@@ -26,10 +28,14 @@
 
     <main>
         @Model.Titulo
+        @Model.Testenome1
     </main>
     
         <div>
-        
+            @if (Model.Mnested1 != null)
+            {
+                <p>EXISTE CONTENT</p>
+            }
         </div>
     
 
