Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -28,7 +28,7 @@
 
     <main>
         @Model.Titulo
-        @Model.Banner
+        @Model.Banner.slideTitle.ToString();
     </main>
     
         <div>
