--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -1,5 +1,6 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Banner>
-@using ContentModels = Umbraco.Web.PublishedModels;
+@using ContentModels = Umbraco.Web.PublishedModels;~
+@using Umbraco.Web;
 
 @{
 	Layout = null;
