Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -33,7 +33,7 @@
     </main>
     
         <div>
-            @if (Model.banner != null)
+            @if (carousel != null)
             {
                 <p>EXISTE CONTENT</p>
             }
