--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -4,7 +4,7 @@
 
 @{
 	Layout = null;
-	IEnumerable<IPublishedContent> carousel = Umbraco.AssignedContentItem.GetPropertyValue<IEnumerable<IPublishedContent>>("carouselId");
+	var carousel  = item.Value<IEnumerable<IPublishedElement>>("slideshowDoc", fallback: Fallback.ToLanguage, defaultValue: null);
 }
 
 
