--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -1,45 +1,11 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Banner>
-@using ContentModels = Umbraco.Web.PublishedModels;
-@using Umbraco.Web;
-
 @{
 	Layout = null;
-	var carousel  = item.Value<IEnumerable<IPublishedElement>>("slideshowDoc", fallback: Fallback.ToLanguage, defaultValue: null);
+	var items  = Model.GetPropertyValue<IEnumerble<IPublishedContent>>("banner")
+	
+	foreach(var item in items) {
+	<h3>item.GetPropertyValue("")</h3>
+	@Umbraco.Field(item,"bodyText")
+	}
 }
-
-
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-</head>
-
-<body >
-    <header class="header">
-
-        <div class="logo">
-        <div class="mobile-nav-handler">
-            <div class="hamburger lines" id="toggle-nav">
-                <span></span>
-            </div>
-        </div>
-    </header>
-
-    <main>
-        @Model.Titulo
-    </main>
-    
-        <div>
-            @if (carousel != null)
-            {
-                <p>EXISTE CONTENT</p>
-            }
-        </div>
-    
-
-</body>
-
-</html>
+}
