Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -4,9 +4,9 @@
 	Layout = null;
 	var items  = Model.GetPropertyValue<IEnumerble<IPublishedContent>>("banner");
 	
-	foreach(var item in items) {
+	@*foreach(var item in items) {
 	<h3>item.GetPropertyValue("")</h3>
 	@Umbraco.Field(item,"bodyText")
-	}
+	}*@
 }
 }
