Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -6,7 +6,7 @@
  }
  
  foreach(var item in items) {
-	<h3>item.GetPropertyValue("")</h3>
+	<h3>item.GetPropertyValue("slideTitle")</h3>
 	@Umbraco.Field(item,"bodyText")
 	}
 
