Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -2,7 +2,7 @@
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 	Layout = null;
-	var items  = Model.GetPropertyValue<IEnumerable<IPublishedContent>>("banner");
+	var items = Model.Value<IEnumerable<IPublishedElement>>("banner");
  }
  
  foreach(var item in items) {
